# AnkiAI-for-IOS

./: .gitattributes  .gitignore  ANDROID-SOURCE-BASELINE.json  BUILDING.md  CLAUDE-FINAL-REPAIR-REPORT.md  CLAUDE-REPAIR-REPORT.md  CLAUDE-THIRD-REPAIR-REPORT.md  CLAUDE.md  CODEX-AUDIT-PROMPT.txt  CODEX-INDEPENDENT-AUDIT.md  CODEX-SECOND-INDEPENDENT-AUDIT.md  CODEX-THIRD-INDEPENDENT-AUDIT.md  CONTINUE-INITIAL-MIGRATION.md  CONTRIBUTING.md  FINALIZE-INITIAL-MIGRATION.md  INSTALLING-IPA.md  LICENSES.md  PHYSICAL-DEVICE-TEST-PLAN.md  README.md  SECURITY.md  STATUS-AUDIT.md  TESTING.md  THIRD_PARTY_NOTICES.md  UPDATE-FROM-ANDROID.md  project.yml
AnkiAI/: Info.plist
AnkiAITests/: AIChatViewModelTests.swift  AICreatorAttachmentTests.swift  AICreatorDeckDuplicateTests.swift  AICreatorSessionTests.swift  AIDatabaseTests.swift  AILanguageTests.swift  AIResponseParserRecoveryTests.swift  AIResponseParserTests.swift  AIReviewerAddCardTests.swift  AnkiWebAuthStateTests.swift  BackendAddNoteTests.swift  BackendAnswerTests.swift  BackendApkgImportSafetyTests.swift  BackendApkgRoundTripTests.swift  BackendBrowserTests.swift  BackendBurySuspendUndoTests.swift  BackendCardInfoTests.swift  BackendClozeTests.swift  BackendColpkgTests.swift  BackendDateBoundaryTests.swift  BackendDeckMgmtTests.swift  BackendDeckOptionsTests.swift  BackendDeckTreeTests.swift  BackendFilteredDeckTests.swift  BackendFlagsTagsTests.swift  BackendImportExportTests.swift  BackendLargeFixtureTests.swift  BackendLearningStepsTests.swift  BackendManualAddTests.swift  BackendMoveCardTests.swift  BackendNoteEditTests.swift  BackendNoteTagsTests.swift  BackendRenderTests.swift  BackendRescheduleTests.swift  BackendReviewQueueTests.swift  BackendStatsGraphsTests.swift  BackendStatsTests.swift  BackendSyncDownloadTests.swift  BackendUnsuspendTests.swift  BackgroundSyncTests.swift  (+17 more)
docs/: ai-feature-analysis.md  android-inventory.md  android-ios-feature-map.yml  android-ios-lifecycle-workflow.md  android-update-history.md  anki-backend-ios-feasibility.md  anki-backend-pin.md  database-and-data-model.md  decision-log.md  feature-parity-checklist.md  final-parity-report.md  implementation-roadmap.md  import-export-analysis.md  ios-architecture.md  known-issues.md  licensing-analysis.md  media-analysis.md  migration-risks.md  progress.md  (+3 more)
rust/anki-backend-ios/: Cargo.toml
rust/anki-backend-ios/include/: anki_backend.h  module.modulemap
rust/anki-backend-ios/src/: lib.rs
(+51 files in other folders)
