[package]
name = "anki_backend_ios"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"
description = "Narrow C-ABI bridge over the pinned upstream Anki Rust backend for iOS."

[lib]
name = "anki_backend_ios"
# staticlib → linked into AnkiCore.xcframework; cdylib not needed on iOS.
crate-type = ["staticlib"]

[dependencies]
# Pinned upstream Anki (see docs/anki-backend-pin.md). Path points at the
# submodule-aware clone produced by tools/build-anki-backend.sh.
# native-tls (Apple Security framework / Secure Transport) gives AnkiWeb sync a
# TLS backend that cross-compiles to iOS without an OpenSSL/aws-lc build.
anki = { path = "../.work/anki/rslib", features = ["native-tls"] }
anki_proto = { path = "../.work/anki/rslib/proto" }
serde_json = "1"
# Same reqwest as anki (0.12) so the Client type matches sync_login/full_download.
# Features come from anki via unification; default-features off to match.
reqwest = { version = "0.12", default-features = false }
# Anki declares tokio without "io-util"; its media/sync code uses AsyncReadExt.
# We also need a runtime (rt) + time/net to block_on the async sync functions.
tokio = { version = "1.45", features = ["io-util", "rt", "rt-multi-thread", "time", "net"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
